--- a/fedora/Dockerfile
+++ b/fedora/Dockerfile
@@ -4,11 +4,11 @@
 # Base docker image
 FROM fedora:23
 
-ADD atom /atom
+ADD ../atom /atom
 
 ADD fedora.sh /atom/fedora.sh
 
-ADD atom.desktop.in /atom/resources/linux/atom.desktop.in
+ADD ../resources/atom.desktop.in /atom/resources/linux/atom.desktop.in
 
 # Install dependencies
 RUN /bin/bash -c "./atom/fedora.sh"
