--- a/fedora/Dockerfile
+++ b/fedora/Dockerfile
@@ -35,26 +35,20 @@ RUN sed -i -e "/exception-reporting/d" \
        -e "s/\"language-gfm\": \".*\",/\"language-gfm2\": \"0.90.3\",\n    \"language-liquid\": \"0.5.1\",/g" \
        -e "s/\"language-shellscript\": \".*\",/\"language-shellscript\": \"0.22.3\",/g" \
        -e "s/\"about\": \".*\"/\"about-arch\": \"1.5.16\"/g" \
-       package.json
+       /atom/package.json
 
-RUN mkdir node_modules
+RUN mkdir /atom/node_modules
 
-RUN wget -cqO- https://github.com/fusion809/about/archive/v1.5.16.tar.gz | tar xz -C node_modules --transform="s/about-1.5.16/about-arch/"
+RUN wget -cqO- https://github.com/fusion809/about/archive/v1.5.16.tar.gz | tar xz -C /atom/node_modules --transform="s/about-1.5.16/about-arch/"
 
-RUN cd node_modules/about-arch
+RUN curl -L https://git.io/vrFrU > /atom/node_modules/about-arch/about-fedora.patch
 
-RUN curl -L https://git.io/vrFrU > about-fedora.patch
+RUN cd /atom/node_modules/about-arch && patch -Np1 < about-fedora.patch
 
-RUN patch -Np1 < about-fedora.patch
+RUN chmod +x /atom/script/{build,grunt,mkrpm}
 
-RUN cd -
+RUN /atom/script/build
 
-RUN cd /atom
-
-RUN chmod +x script/{build,grunt,mkrpm}
-
-RUN script/build
-
-RUN script/grunt mkrpm
+RUN /atom/script/grunt mkrpm
 
 COPY "./atom/out/rpm/atom-1.7.4-0.1.fc23.x86_64.rpm" .
