--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -12,14 +12,14 @@ RUN apt-get update && apt-get install -y build-essential git libgnome-keyring-de
     cd /atom \
     sed -i -e "/exception-reporting/d" \
        -e "/metrics/d" \
-       -e "s/\"language-gfm\": \".*\",/\"language-gfm2\": \"0.90.3\",\n    \"language-liquid\": \"0.5.1\",/g" \
-       -e "s/\"language-shellscript\": \".*\",/\"language-shellscript\": \"0.22.3\",/g" \
-       -e "s/\"about\": \".*\"/\"about-arch\": \"1.5.16\"/g" \
+       -e "s/\"language-gfm\": \".*\",/\"language-gfm2\": \"0.92.2\",\n    \"language-liquid\": \"0.5.1\",/g" \
+       -e "s/\"language-shellscript\": \".*\",/\"language-unix-shell\": \"0.37.7\",/g" \
+       -e "s/\"about\": \".*\"/\"about-arch\": \"1.6.2\"/g" \
        package.json \
     mkdir node_modules \
-    wget -c https://github.com/fusion809/about/archive/v1.5.16.tar.gz \
-    tar -xzf v1.5.16.tar.gz -C node_modules --transform="s/about-1.5.16/about-arch/" \
+    wget -c https://github.com/fusion809/about/archive/v1.6.2.tar.gz \
+    tar -xzf v1.6.2.tar.gz -C node_modules --transform="s/about-1.6.2/about-arch/" \
     cd node_modules/about-arch && curl -L https://git.io/vrFNY > about-debian.patch && patch -Np1 < about-debian.patch && cd - \
     cd /atom && until script/build; do :; done && script/grunt mkdeb
 
-COPY "./atom/out/atom-1.7.4-amd64.deb" .
+COPY "./atom/out/atom-1.9.9-amd64.deb" .
